--- a/templates/kitchen/index.html
+++ b/templates/kitchen/index.html
@@ -16,7 +16,11 @@
           <div class="col-md-4 position-relative">
             <div class="p-3 text-center">
               <h1 class="text-gradient text-primary"><span id="state1">{{ num_cooks }}</span>+</h1>
-              <h5 class="mt-3">Cooks</h5>
+              <h5 class="mt-3">
+                <a href="{% url 'kitchen:cook-list' %}">
+                  Cooks
+                </a>
+              </h5>
               <p class="text-sm">The very best workers of ours</p>
             </div>
             <hr class="vertical dark">
@@ -24,7 +28,11 @@
           <div class="col-md-4 position-relative">
             <div class="p-3 text-center">
               <h1 class="text-gradient text-primary"> <span id="state2">{{ num_dishes }}</span>+</h1>
-              <h5 class="mt-3">Dishes</h5>
+              <h5 class="mt-3">
+                <a href="{% url 'kitchen:dish-list' %}">
+                  Dishes
+                </a>
+              </h5>
               <p class="text-sm">All dishes we can create</p>
             </div>
             <hr class="vertical dark">
@@ -32,7 +40,11 @@
           <div class="col-md-4">
             <div class="p-3 text-center">
               <h1 class="text-gradient text-primary"> <span id="state3">{{ num_dish_type }}</span>+</h1>
-              <h5 class="mt-3">Dish type</h5>
+              <h5 class="mt-3">
+                <a href="{% url 'kitchen:dish-type-list' %}">
+                  Dish type
+                </a>
+              </h5>
               <p class="text-sm">All types of dishes on our kitchen</p>
             </div>
           </div>
