Fix bug not to update cook, not to create dish, not to add ingredient, change way to seelct date for best before

--- a/templates/kitchen/dish_detail.html
+++ b/templates/kitchen/dish_detail.html
@@ -24,7 +24,11 @@
                       <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-2">
                         <div class="container border-bottom">
                           <div class="row justify-space-between py-2">
-                            <p>Dish type: <a href="{% url 'kitchen:dish-type-detail' pk=dish.dish_type.id %}">{{ dish.dish_type }}</a></p>
+                            {% if dish.dish_type %}
+                              <p>Dish type: <a href="{% url 'kitchen:dish-type-detail' pk=dish.dish_type.id %}">{{ dish.dish_type }}</a></p>
+                            {% else %}
+                              <p>Dish type: This dish doesn't belong to existing types</p>
+                            {% endif %}
                           </div>
                         </div>
                       </div>
