change template stule to make it looks better

--- a/templates/kitchen/index.html
+++ b/templates/kitchen/index.html
@@ -15,7 +15,7 @@
         <div class="row">
           <div class="col-md-4 position-relative">
             <div class="p-3 text-center">
-              <h1 class="text-gradient text-primary"><span id="state1">{{ num_cooks }}</span>+</h1>
+              <h1 class="text-gradient text-primary"><span id="state1">{{ num_cooks }}</span></h1>
               <h5 class="mt-3">
                 <a href="{% url 'kitchen:cook-list' %}">
                   Cooks
@@ -27,7 +27,7 @@
           </div>
           <div class="col-md-4 position-relative">
             <div class="p-3 text-center">
-              <h1 class="text-gradient text-primary"> <span id="state2">{{ num_dishes }}</span>+</h1>
+              <h1 class="text-gradient text-primary"> <span id="state2">{{ num_dishes }}</span></h1>
               <h5 class="mt-3">
                 <a href="{% url 'kitchen:dish-list' %}">
                   Dishes
@@ -39,7 +39,7 @@
           </div>
           <div class="col-md-4">
             <div class="p-3 text-center">
-              <h1 class="text-gradient text-primary"> <span id="state3">{{ num_dish_type }}</span>+</h1>
+              <h1 class="text-gradient text-primary"> <span id="state3">{{ num_dish_type }}</span></h1>
               <h5 class="mt-3">
                 <a href="{% url 'kitchen:dish-type-list' %}">
                   Dish type
