--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,7 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <p>You are logged out!</p>
-
-  <a href="{% url 'login' %}">Click here ti login again.</a>
+  <section>
+    <div class="page-header relative">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 text-center mx-auto">
+            <p>You are logged out!</p>
+            <a href="{% url 'login' %}">Click here to login again.</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
